--- a/products/handwash/index.html
+++ b/products/handwash/index.html
@@ -5,6 +5,16 @@
   <title>Clean Max Intense Wash Handwash</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RD36T2RRWH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RD36T2RRWH');
+  </script>
+  
   <link rel="stylesheet" href="../../assets/css/styles.css">
 </head>
 <body>
