--- a/products/phenyl/index.html
+++ b/products/phenyl/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <title>Clean Max Phenyl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RD36T2RRWH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RD36T2RRWH');
+  </script>
+
+  
   <link rel="stylesheet" href="../../assets/css/styles.css">
 </head>
 <body>
