--- a/products/glass-cleaner/index.html
+++ b/products/glass-cleaner/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Neem Herbal Floor Cleaner</title>
+  <title>Clean Max Glass Cleaner – 10X Shine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google tag (gtag.js) -->
@@ -42,31 +42,31 @@
 
 <!-- BREADCRUMB -->
 <nav class="breadcrumb">
-  Home › Floor Cleaner › <strong>Neem Herbal Floor Cleaner</strong>
+  Home › Glass Cleaner › <strong>Glass Cleaner – 10X Shine</strong>
 </nav>
 
 <!-- HERO -->
 <section class="hero">
   <div class="hero-image">
     <img
-      src="../../assets/images/P_Floor Cleaner BG.png"
-      alt="Neem Herbal Floor Cleaner"
+      src="../../assets/images/P_glass cleaner Bg.png"
+      alt="Clean Max Glass Cleaner 10X Shine"
     >
   </div>
 
   <div class="hero-content">
-    <h1>Neem Herbal Floor Cleaner</h1>
+    <h1>Glass Cleaner – 10X Shine</h1>
 
     <div class="rating">
       ★★★★☆
     </div>
 
     <ul class="features">
-      <li>Neem-based herbal formula</li>
-      <li>Anti-bacterial protection</li>
-      <li>No chemical residue</li>
-      <li>Fresh natural fragrance</li>
-      <li>Safe for kids & pets</li>
+      <li>10X sparkling shine</li>
+      <li>Multipurpose glass cleaning</li>
+      <li>Free from ammonia</li>
+      <li>No streaks or residue</li>
+      <li>Fresh fragrance</li>
     </ul>
   </div>
 </section>
@@ -75,11 +75,10 @@
 <section class="section">
   <h2>About the Product</h2>
   <p>
-    Neem Herbal Floor Cleaner is made using natural neem extracts
-    that help keep floors hygienically clean while being gentle on
-    your home environment. It effectively removes dirt and germs
-    without leaving behind harmful chemical residues, making it
-    ideal for daily household cleaning.
+    Clean Max Glass Cleaner is a powerful multipurpose cleaner designed
+    to deliver streak-free, sparkling shine on glass and shiny surfaces.
+    Its ammonia-free formula ensures safe and effective cleaning for
+    homes, offices, and commercial spaces.
   </p>
 </section>
 
@@ -87,23 +86,24 @@
 <section class="details-grid">
 
   <div class="box">
-    <h3>Key Ingredients</h3>
+    <h3>Composition</h3>
     <ul>
-      <li>Neem Extract</li>
-      <li>Purified Water</li>
-      <li>Natural Surfactants</li>
-      <li>Fragrance</li>
-      <li>Stabilizers</li>
+      <li>Benzalkonium Chloride</li>
+      <li>Non-ionic Surfactants</li>
+      <li>Ethyl Alcohol</li>
+      <li>Hydrogen Peroxide</li>
+      <li>DM Water</li>
+      <li>Fragrance & Color</li>
     </ul>
   </div>
 
   <div class="box">
     <h3>How to Use</h3>
     <ol>
-      <li>Add 1–2 caps to a bucket of water</li>
-      <li>Mop the floor evenly</li>
-      <li>No rinsing required</li>
-      <li>Allow floor to air dry</li>
+      <li>Turn nozzle to spray or stream position</li>
+      <li>Spray directly on surface</li>
+      <li>Wipe with clean, dry cloth</li>
+      <li>Buff lightly for extra shine</li>
     </ol>
   </div>
 
@@ -112,19 +112,21 @@
     <ul>
       <li>For external use only</li>
       <li>Avoid contact with eyes</li>
+      <li>Do not ingest</li>
       <li>Keep out of reach of children</li>
-      <li>Do not mix with other cleaners</li>
+      <li>Do not use on electronic screens</li>
     </ul>
   </div>
 
   <div class="box">
-    <h3>About Clean Max</h3>
-    <p>
-      Manufactured & Marketed by<br>
-      <strong>A.B. Enterprises</strong><br>
-      Champdani, Hooghly<br>
-      West Bengal – 712222, India
-    </p>
+    <h3>Recommended For</h3>
+    <ul>
+      <li>Glass & mirrors</li>
+      <li>Windows</li>
+      <li>Kitchen cabinets</li>
+      <li>Car windshields</li>
+      <li>Refrigerators & appliances</li>
+    </ul>
   </div>
 
 </section>
